# SceneDataset

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
notebooks/: test_dataset.ipynb
scripts/: find_threshold_duplicate.py
src/scenedataset/: scenedataset.py
tests/: test_scenedataset.py
