[tool.poetry]
name = "scenedataset"
version = "0.1.0"
description = "PyTorch dataset which uses PySceneDetect to split videos into scenes"
authors = ["Farid Abdalla"]
license = "BSD 3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
decord = ">=0.6.0"
loguru = ">=0.6.0"
ffmpeg = ">=1.4"
scenedetect = ">=0.6.1"
torch = "^1.13.1"
opencv-python = "^4.7.0.68"
ffmpeg-python = "^0.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
